--- a/ref.bib
+++ b/ref.bib
@@ -6,45 +6,45 @@
 
 %% Saved with string encoding Unicode (UTF-8) 
 
-@mastersthesis{lxybachelor2018,
-	Address = {10.13140/RG.2.2.34092.69760},
-	Author = {\textbf{Xiangyu Liu}},
-	Date-Added = {2020-05-22 14:58:49 +0800},
-	Date-Modified = {2020-05-22 15:59:04 +0800},
-	School = {University of Eletronic Science and Technology of China},
-	Title = {Research on Organizational Attraction of JD.COM in the era of Smart Logistics (only in Chinese)},
-	Type = {{Bechalor Thesis}},
-	Year = {2018}}
 
-@mastersthesis{xiangyu2019quantitative,
-	Address = {10.13140/RG.2.2.14698.88002},
-	Author = {\textbf{Xiangyu Liu}},
-	Date-Added = {2020-05-22 14:07:50 +0800},
-	Date-Modified = {2020-05-22 16:05:40 +0800},
-	School = {Nanyang Technological University Singapore},
-	Title = {Quantitative trajectory evaluation criterion and long-term enhancement for multi-robot slam},
-	Year = {2019}}
-
-@article{yijie2016,
-	author = {Yijie {Qu} and \textbf{Xiangyu Liu} and JiaXiang {Xu}},
-	date-added = {2021-05-27 15:09:50 +0800},
-	date-modified = {2021-05-27 15:23:05 +0800},
-	journal = {Patent No. CN201710174508.7},
-	title = {Patent: A UAV-mounted lightweight grabbing device},
-	year = {2016}}
-	
+@STRING{IROS       = "IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)"}
+@STRING{RAL       = "IEEE Robotics and Automation Letters (RA-L)"}
+@STRING{ICRA       = "IEEE International Conference on Robotics and Automation (ICRA)"}
+@STRING{TRO       = "IEEE Transactions on Robotics (T-RO)"}
+@STRING{IJRR      = "The International Journal of Robotics Research (IJRR)"}
 	
 @inproceedings{xiangyu2021coxgraph,
   author={\textbf{Xiangyu Liu} and Ye, Weicai and Tian, Chaoran and Cui, Zhaopeng and Zhang, Guofeng and Bao, Hujun},
-  booktitle={IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)},
+  booktitle=IROS,
   title={Coxgraph: Multi-Robot Collaborative, Globally Consistent, Online Dense Reconstruction System},
   note = {Best Paper Award Finalist on Safety, Security, and Rescue Robotics},
   year={2021}
 }
 
-@article{puthumanaillam2023weathering,
-  title={Weathering Ongoing Uncertainty: Learning and Planning in a Time-Varying Partially Observable Environment},
-  author={Puthumanaillam, Gokul and \textbf{Xiangyu Liu} and Mehr, Negar and Ornik, Melkior},
-  journal={arXiv preprint arXiv:2312.03263},
-  year={2023}
+@INPROCEEDINGS{10610954,
+  author={Puthumanaillam, Gokul and \textbf{Liu, Xiangyu} and Mehr, Negar and Ornik, Melkior},
+  booktitle=ICRA,
+  title={Weathering Ongoing Uncertainty: Learning and Planning in a Time-Varying Partially Observable Environment}, 
+  year={2024},
+  volume={},
+  number={},
+  keywords={Accuracy;Uncertainty;Markov decision processes;Computational modeling;Decision making;Stochastic processes;Weathering}}
+
+@ARTICLE{raido,
+  author={Liu, Xiangyu and Chli, Margarita},
+  journal={IEEE Robotics and Automation Letters}, 
+  title={Distributed Pose Graph Optimization via Contractive Belief Sharing}, 
+  year={2025},
+  volume={},
+  number={},
+  pages={1-8},
+  keywords={Robots;Convergence;Trajectory;Robot kinematics;Optimization;Belief propagation;Simultaneous localization and mapping;Accuracy;Scalability;Estimation;Multi-Robot SLAM;Localization;SLAM},
+  doi={10.1109/LRA.2025.3632725}}
+
+@inproceedings{deslam,
+  author = {\textbf{Xiangyu Liu} and Margarita Chli},
+  title = {DE-SLAM: Efficient Visual-Inertial SLAM using Deep Features for Embedded GPUs},
+  booktitle = ICRA,
+  year = {2026},
+  note = "Under review"
 }
